<resources>
    <string name="app_name">CourseSync</string>
    <string name="send_code">Отправить код</string>
    <string name="verify_code">Войти</string>
    <string name="create_group">Создать группу</string>
    <string name="join_group">Присоединиться к группе</string>
    <string name="group_name_hint">Название группы</string>
    <string name="create">Создать</string>
    <string name="add_content">Добавить</string>
    <string name="toolbar_group_menu">Создать или присоединиться к группе</string>
    <string name="toolbar_group_switch_content_description">Выбрать текущую группу</string>
    <string name="toolbar_no_group_label">Нет группы</string>
    <string name="no_groups">Вы не состоите ни в одной группе…</string>
    <string name="groups_load_error">Не удалось загрузить список групп. Уже работаем над этим</string>
    <string name="create_group_validation_error">• Длина от 1 до 20\n• Только латинские и русские буквы и цифры</string>
    <string name="create_group_server_error">Ошибка при создании группы. Попробуйте позже</string>
    <string name="internal_error">Внутренняя ошибка. Уже работаем над исправлением</string>
    <string name="network_error">Ошибка сети</string>
    <string name="list_error_retry">Повторить</string>
    <string name="courses_list_load_error">Не удалось загрузить курсы. Попробуйте позже</string>
    <string name="login_validation_email_empty">Поле не должно быть пустым</string>
    <string name="login_validation_email_invalid">Введите корректную почту</string>
    <string name="login_validation_email_not_hse">Поддерживается только корпоративная почта ВШЭ</string>
    <string name="login_validation_code_empty">Введите код</string>
    <string name="login_code_expired">Код истёк. Отправьте новый</string>
    <string name="login_rate_limited">Можно отправить только 1 код в минуту</string>
    <string name="login_send_code_failed">Не удалось отправить код. Попробуйте позже</string>
    <string name="login_too_many_attempts">Слишком много попыток</string>
    <string name="copy_invite_code">Скопировать пригласительный код</string>
    <string name="invite_code_copied">Пригласительный код скопирован</string>
    <string name="group_code_hint">Введите код группы</string>
    <string name="join">Присоединиться</string>
    <string name="invalid_code">Неверный код</string>
    <string name="enter_code">Введите код</string>
    <string name="join_group_server_error">Не удалось присоединиться к группе. Попробуйте позже</string>
    <string name="choose_group_error">Не удается выбрать группу. Попробуйте еще раз</string>
    <string name="save">Сохранить</string>
    <string name="update_group_name_error">Не удалось обновить название группы. Попробуйте позже</string>
    <string name="edit_group_title">Изменить группу</string>
    <string name="group_action_edit">Изменить</string>
    <string name="group_action_delete">Удалить</string>
    <string name="delete_group_dialog_message">Точно ли хотите удалить группу? Она удалится у всех участников, это необратимое действие.</string>
    <string name="delete_group_server_error">Не удалось удалить группу. Попробуйте позже</string>
    <string name="leave_group_content_description">Покинуть группу</string>
    <string name="leave_group_dialog_message">Вы действительно хотите покинуть группу?</string>
    <string name="leave_group_server_error">Не удалось покинуть группу. Попробуйте позже</string>
    <string name="group_role_owner">Владелец</string>
    <string name="group_role_member">Участник</string>
    <string name="group_members_title">Список участников</string>
    <string name="group_action_members">Список участников</string>
    <string name="group_members_empty">Участников пока нет</string>
    <string name="group_members_load_error">Не удалось загрузить участников</string>
    <string name="group_members_toggle_error">Не удалось изменить доступ</string>
    <string name="cd_group_member_access_active">Участник в группе, нажмите чтобы заблокировать</string>
    <string name="cd_group_member_access_blocked">Участник заблокирован, нажмите чтобы разблокировать</string>
    <string name="courses_no_group">Упс…\nВыберите хотя бы одну группу…</string>
    <string name="courses_empty">Пока тут нет ни одного курса…</string>
    <string name="create_course">Создать курс</string>
    <string name="course_name_hint">Название курса</string>
    <string name="general_info_hint">Общая информация</string>
    <string name="general_info_hint_optional">Общая информация (необязательно)</string>
    <string name="enter_course_name">Введите название курса…</string>
    <string name="enter_general_info">Введите общую информацию…</string>
    <string name="course_name_max_length">Длина не более 20 символов</string>
    <string name="general_info_max_length">Длина не более 2000 символов</string>
    <string name="useful_links_hint">Полезные ссылки</string>
    <string name="useful_links_entry_helper">Строка: описание|URL. Можно несколько строк. Можно оставить пустым.</string>
    <string name="enter_useful_links">Введите полезные ссылки…</string>
    <string name="useful_links_max_length">Длина не более 1000 символов</string>
    <string name="useful_links_invalid_format">Укажите ссылки как описание|URL или одну ссылку с https:// в строке</string>
    <string name="useful_links_too_many_error">Не более 50 ссылок</string>
    <string name="useful_link_fields_invalid">Название до 50 символов, ссылка до 200 символов</string>
    <string name="link_default_title">Ссылка</string>
    <string name="link_open_error">Не удалось открыть ссылку</string>
    <string name="course_useful_link_row_a11y">Открыть ссылку: %1$s</string>
    <string name="cancel">Отмена</string>
    <string name="edit_course_no_links">Пока нет ссылок</string>
    <string name="add_useful_link_dialog_title">Новая ссылка</string>
    <string name="useful_link_title_hint">Название (необязательно)</string>
    <string name="useful_link_url_hint">Ссылка</string>
    <string name="remove_link_content_description">Удалить ссылку</string>
    <string name="useful_link_enter_title">Введите название</string>
    <string name="useful_link_enter_url">Введите ссылку</string>
    <string name="useful_link_title_too_long">Не более 50 символов</string>
    <string name="useful_link_url_too_long">Не более 200 символов</string>
    <string name="contacts_hint">Контакты</string>
    <string name="edit_course_no_contacts">Пока нет контактов</string>
    <string name="add_teacher">Добавить преподавателя</string>
    <string name="add_contact_method">Добавить контакт</string>
    <string name="add_contact_method_dialog_title">Новый контакт</string>
    <string name="add_teacher_dialog_title">Новый преподаватель</string>
    <string name="contact_person_name_hint">Преподаватель</string>
    <string name="contact_method_type_hint">Тип (необязательно)</string>
    <string name="contact_method_value_hint">Значение</string>
    <string name="remove_contact_content_description">Удалить контакт</string>
    <string name="remove_teacher_content_description">Удалить преподавателя</string>
    <string name="contact_person_name_required">Введите имя преподавателя</string>
    <string name="contact_method_type_required">Введите тип</string>
    <string name="contact_method_value_required">Введите значение</string>
    <string name="contact_person_name_invalid">Имя не длиннее 100 символов</string>
    <string name="contact_method_type_invalid">Тип не длиннее 100 символов</string>
    <string name="contact_method_value_invalid">Значение не длиннее 200 символов</string>
    <string name="contacts_need_at_least_one">Добавьте хотя бы один контакт</string>
    <string name="contacts_need_at_least_one_method">Добавьте хотя бы один контакт для каждого преподавателя</string>
    <string name="contacts_too_many_people">Не более 10 преподавателей</string>
    <string name="contacts_too_many_methods">Не более 10 контактов на преподавателя</string>
    <string name="contacts_invalid_fields">Заполните контакты корректно</string>
    <string name="contact_value_copied">Скопировано в буфер обмена</string>
    <string name="create_course_server_error">Не удалось создать курс. Попробуйте позже</string>
    <string name="update_course_server_error">Не удалось сохранить курс. Попробуйте позже</string>
    <string name="course_load_error">Не удалось загрузить курс. Попробуйте позже</string>
    <string name="course_calendar_events_title">События курса</string>
    <string name="delete_course_dialog_message">Вы действительно хотите удалить курс %1$s?</string>
    <string name="delete_course_unnamed_placeholder">без названия</string>
    <string name="delete_course_server_error">Не удалось удалить курс. Попробуйте позже</string>
    <string name="edit_course">Изменить курс</string>
    <string name="course_materials_shared">Общие материалы</string>
    <string name="course_materials_personal">Индивидуальные материалы</string>
    <string name="grading_formula">Формула оценивания</string>
    <string name="grading_formula_text_empty">Нет описания формулы оценивания</string>
    <string name="grading_formula_load_error">Не удалось загрузить описание. Попробуйте позже</string>
    <string name="grading_formula_more_options">Текст формулы оценивания</string>
    <string name="grading_formula_close_dialog">Закрыть</string>
    <string name="grading_formula_description_hint">Описание формулы оценивания</string>
    <string name="grading_formula_save_error">Не удалось сохранить. Попробуйте позже</string>
    <string name="grading_formula_text_too_long">Описание не длиннее 3000 символов</string>
    <string name="grading_control_element_column">Элемент контроля</string>
    <string name="grading_coefficient_column">Коэффициент</string>
    <string name="grading_accumulated_score">Накопленная оценка</string>
    <string name="grading_nakop_label">Накоп</string>
    <string name="grading_nakop_not_configured_yet">Пока не настроен</string>
    <string name="grading_nakop_dialog_title">Накоп</string>
    <string name="grading_nakop_edit_content_description">Изменить настройки накопленной оценки</string>
    <string name="grading_nakop_info_content_description">Информация о накопленной оценке</string>
    <string name="grading_cumulative_elements_label">Включенные элементы контроля</string>
    <string name="grading_cumulative_add_element">Добавить элемент контроля</string>
    <string name="grading_cumulative_block">Блок</string>
    <string name="grading_cumulative_automatic">Автомат</string>
    <string name="grading_cumulative_save">Сохранить</string>
    <string name="grading_cumulative_load_options_error">Не удалось загрузить элементы контроля</string>
    <string name="grading_cumulative_save_error">Не удалось сохранить накопленную оценку</string>
    <string name="grading_cumulative_save_forbidden">Настраивать накопленную оценку может только владелец группы</string>
    <string name="grading_cumulative_need_element">Выберите хотя бы один элемент контроля</string>
    <string name="grading_cumulative_threshold_range">Введите число от 0 до 10</string>
    <string name="grading_cumulative_block_gt_auto">Блок не может быть больше автомата</string>
    <string name="add_control_element">Добавить элемент контроля</string>
    <string name="grading_score_column_number">Номер</string>
    <string name="grading_score_column_value">Оценка</string>
    <string name="grading_add_score_entry">Добавить элемент</string>
    <string name="grading_delete_score_entry">Удалить элемент</string>
    <string name="calendar_event_group_hint">Группа</string>
    <string name="calendar_event_course_hint">Курс</string>
    <string name="calendar_event_type_hint">Тип события</string>
    <string name="event_name_hint">Название события</string>
    <string name="event_date_hint">Дата и время</string>
    <string name="event_description_hint">Описание</string>
    <string name="event_edit">Изменить</string>
</resources>